force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Appointment__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The appointment that the appointment request is linked with</description>
    <label>Appointment</label>
    <referenceTo>VCC_Appointment__c</referenceTo>
    <relationshipLabel>Appointment Requests</relationshipLabel>
    <relationshipName>Appointment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>