force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Clinic__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Clinic the Appointment Request is linked to</description>
    <label>Clinic</label>
    <referenceTo>VCC_Clinic__c</referenceTo>
    <relationshipLabel>Appointment Requests</relationshipLabel>
    <relationshipName>Appointment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>