force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Clinic_IEN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic_IEN__c</fullName>
    <description>The Id that represents the Clinic associated with the Appointment Request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinic IEN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>