force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Clinic_Indicated_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic_Indicated_Date__c</fullName>
    <description>The Clinic Indicated Date (CID) is entered by a provider ordering a consult and should be the date by which it is clinically appropriate to complete the consult.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinic Indicated Date</label>
    <type>Date</type>
</CustomField>