force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Consult_Urgency_or_Earliest_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Consult_Urgency_or_Earliest_Date__c</fullName>
    <description>The consult urgency date OR the earliest date the request should be fulfilled. This value is computed from URGENCY and CLINICAL INDICATED DATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Consult Urgency or Earliest Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>