force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_CPRS_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_CPRS_Order_Id__c</fullName>
    <description>CPRS Order Id for Appointment Requests created from the CHRONOS svas/requests endpoint.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CPRS Order Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>