force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>VCC_Current_Status__c</fullName>
    <description>This field represents the current status of this appointment request. If the APPT Request entry is dispositioned, the status = CLOSED, otherwise, the APPT Request entry status = OPEN.</description>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>