force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Dispositioned_By__c.field-meta.xml
<CustomField>
    <fullName>VCC_Dispositioned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the appointment request is cancelled (dispositioned), this saves a record of which User performed the Cancel action</description>
    <label>Dispositioned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>