force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Enrollment_Priority_Group__c.field-meta.xml
<CustomField>
    <fullName>VCC_Enrollment_Priority_Group__c</fullName>
    <description>The appointment enrollment priority.</description>
    <label>Enrollment Priority Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
            <value>
                <fullName>Group 6</fullName>
            </value>
            <value>
                <fullName>Group 7</fullName>
            </value>
            <value>
                <fullName>Group 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>