force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_IEN__c.field-meta.xml
<CustomField>
    <fullName>VCC_IEN__c</fullName>
    <description>The IEN (Internal Entry Number) for the Appointment Request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IEN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>