force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Labs__c.field-meta.xml
<CustomField>
    <fullName>VCC_Labs__c</fullName>
    <description>A picklist to select either Fasting or Non-Fasting as a prerequisite to any Labs that will be run at the appointment</description>
    <label>Labs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fasting</fullName>
            </value>
            <value>
                <fullName>Non Fasting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>