force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Modality__c.field-meta.xml
<CustomField>
    <fullName>VCC_Modality__c</fullName>
    <description>This field represents how the requested appointment will be conducted. For example, if the patient will be seen in the office face to face with the provider the modality will be &quot;Face to Face&quot;. If the appointment is a VVC appointment where the patient and provider will use video then the modality is &quot;Video&quot;. If the appointment is a telephone appointment with no video then the modality will be &quot;Telephone&quot;.</description>
    <label>Modality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>