force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Patient__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents the related Patient record</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointment Requests</relationshipLabel>
    <relationshipName>Appointment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>