force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Patient_DFN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient_DFN__c</fullName>
    <description>Used to store the patient&apos;s DFN from VistA.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient DFN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>