force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Patient_ICN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient_ICN__c</fullName>
    <description>This field represents the unique Id associated with the patient record that identifies them in external systems.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient ICN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>