force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_PatientStatus__c.field-meta.xml
<CustomField>
    <fullName>VCC_PatientStatus__c</fullName>
    <description>The status of the patient.</description>
    <label>Patient Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>ESTABLISHED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>