force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Priority__c.field-meta.xml
<CustomField>
    <fullName>VCC_Priority__c</fullName>
    <description>This represents the appointment priority. Future indicates that the patient needs an appointment in the future and a desired date will be entered by the user. ASAP indicates that the patient needs an appointment before the currently next available appointment (as soon as a slot opens). The desired date for ASAP will be set by the system as the current date.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>