force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Provider_IEN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Provider_IEN__c</fullName>
    <description>The IEN (Internal Entry Number) of the requesting Provider.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider IEN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>