force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Release_Date__c</fullName>
    <description>This is the date and time the order was released from CPRS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Release Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>