force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>VCC_RequestedBy__c</fullName>
    <description>The field represents the entity that requested the appointment.</description>
    <label>Requested By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>