force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_Time_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>VCC_Time_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate time sensitive Return to Clinic order.</description>
    <label>Time Sensitive</label>
    <type>Checkbox</type>
</CustomField>