force-app/main/default/objects/VCC_AppointmentRequest__c/fields/VCC_To_Service__c.field-meta.xml
<CustomField>
    <fullName>VCC_To_Service__c</fullName>
    <description>This service is responsible for completion of the consult/request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>To Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>