force-app/main/default/objects/VCC_AppointmentRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VCC_Current_Status__c</columns>
    <columns>VCC_AppointmentRequestType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>VCC_Facility_Name__c</columns>
    <columns>VCC_Patient_Indicated_Date__c</columns>
    <columns>VCC_Patient__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>